--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: osiris
-description: Movie and Show tracking app
+name: Kepu
+description: Movie,Show,Game and Music tracking app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.1.8
   lottie: ^2.3.2
   cloud_firestore: ^4.7.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
