--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Kepu
+name: kepu
 description: Movie,Show,Game and Music tracking app
 
 # The following line prevents the package from being accidentally published to
