--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  equatable: ^2.0.5
+  flex_color_scheme: ^7.2.0
   flutter:
     sdk: flutter
 
@@ -54,10 +56,18 @@ dependencies:
   intl: ^0.18.1
   google_fonts: ^4.0.4
   fluttericon: ^2.0.0
+  path: ^1.8.3
+  sqflite: ^2.3.0
+  gap: ^3.0.1
+  firebase_database: ^10.3.4
+  selector_wheel: ^1.1.2
+  flutter_fortune_wheel: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
