--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -812,6 +812,7 @@ flutter:
     - assets/page-1/images/vector-L5g.png
     - assets/page-1/images/stadiacontrollerfill0wght400grad0opsz24-1-K62.png
     - assets/page-1/images/signal-qR4.png
+    - assets/page-1/images/logout_FILL0_wght400_GRAD0_opsz24-1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
