--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -813,6 +813,10 @@ flutter:
     - assets/page-1/images/stadiacontrollerfill0wght400grad0opsz24-1-K62.png
     - assets/page-1/images/signal-qR4.png
     - assets/page-1/images/logout_FILL0_wght400_GRAD0_opsz24-1.png
+    - assets/page-1/images/Rectangle_34_round.png
+    - assets/page-1/images/Rectangle_47_round.png
+    - assets/page-1/images/Rectangle_48_round.png
+    - assets/page-1/images/Rectangle_49_round.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
