--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,13 @@ dependencies:
   sqflite: ^2.3.0
   gap: ^3.0.1
   firebase_database: ^10.3.4
-  selector_wheel: ^1.1.2
-  flutter_fortune_wheel: ^1.3.0
+  get: ^4.6.5
+  email_validator: ^2.1.17
+  shared_preferences: ^2.2.0
+  sign_in_with_apple: ^5.0.0
+  flutter_svg: ^2.0.7
+  connectivity: ^3.0.6
+  animated_bottom_navigation_bar: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +94,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
+    - assets/images/
     - assets/page-1/images/wifi.png
     - assets/page-1/images/donefill0wght400grad0opsz24-1.png
     - assets/page-1/images/ellipse-13.png
