--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Hannah\Documents\SDK\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Hannah\Documents\kepu
+FLUTTER_ROOT=C:\flutter_windows_3.13.6-stable\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Thuan\Documents\GitHub\kepu
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
