--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,10 +73,12 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.6
 
+flutter_launcher_icons: ^0.12.0
+
 flutter_icons:
-  android: "launcher_icon"
-  image_path_android: "assets/launcher_icon"
-  adaptive_icon_background: "#00000"
+  android: true
+  image_path_android: "assets/AppIcon.png"
+  adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: "assets/launcher_icon/mipmap-xxxhdpi/ic_launcher.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
