--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_svg: ^2.0.7
   connectivity: ^3.0.6
   animated_bottom_navigation_bar: ^1.2.0
+  flutter_fortune_wheel: ^1.3.0
 
 dev_dependencies:
   flutter_test:
