--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,8 +57,14 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfigs {
+                debug {
+                    storeFile file("debug.keystore")
+                }
+                // Signing with the debug keys for now, so `flutter run --release` works.
+                signingConfig signingConfigs.debug
+            }
+
         }
     }
 }
