--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   connectivity: ^3.0.6
   animated_bottom_navigation_bar: ^1.2.0
   flutter_fortune_wheel: ^1.3.0
+  custom_sliding_segmented_control: ^1.8.1
+  material_segmented_control: ^5.0.0
+  animated_segmented_tab_control: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
