--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_auth: ^4.2.4
   google_sign_in: ^6.1.6
   provider: ^6.0.5
-  font_awesome_flutter: ^10.3.0
+  font_awesome_flutter: ^9.2.0
   flutter_launcher_icons: ^0.13.1
   carousel_slider: ^4.2.1
   unicons: ^2.1.0
@@ -67,10 +67,8 @@ dependencies:
   flutter_svg: ^2.0.7
   connectivity: ^3.0.6
   animated_bottom_navigation_bar: ^1.2.0
-  flutter_fortune_wheel: ^1.3.0
-  custom_sliding_segmented_control: ^1.8.1
-  material_segmented_control: ^5.0.0
-  animated_segmented_tab_control: ^1.2.0
+  material_design_icons_flutter: ^7.0.7296
+  flutter_secure_storage: ^9.0.0
 
 
 dev_dependencies:
