--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.9.20'
     repositories {
-        google()
         mavenCentral()
+        google()
     }
 
 
@@ -12,12 +12,12 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.13'
 
 
-
     }
 }
 
 allprojects {
     repositories {
+        maven {url 'https://jitpack.io'}
         google()
         mavenCentral()
     }
