--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,9 +57,9 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             signingConfigs {
-                debug {
-                    storeFile file("debug.keystore")
-                }
+               // debug {
+               //     storeFile file("debug.keystore")
+              //  }
                 // Signing with the debug keys for now, so `flutter run --release` works.
                 signingConfig signingConfigs.debug
             }
