--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   msh_checkbox: ^1.1.1
   uuid: ^3.0.6
   flutter_fortune_wheel: ^1.3.0
-
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
