Added music api,screens,data

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,13 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+    signingConfigs {
+        release {
 
+            storeFile file('debug.keystore')
+
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
