--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: any
-  dio: ^4.0.6
+  dio: any
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.4
   google_sign_in: ^5.4.2
@@ -108,8 +108,24 @@ dependencies:
   bitsdojo_window: ^0.1.5
   change_app_package_name: ^1.1.0
   titlebar_buttons: ^1.0.0
+
   auto_route: ^7.8.4
 
+  flutter_bloc: ^8.1.1
+  dartz: ^0.10.1
+  mocktail: ^0.3.0
+  bloc_test: ^9.1.0
+  floor: ^1.4.1
+  floor_generator: ^1.3.0
+  internet_connection_checker: ^1.0.0+1
+  retrofit: ^4.0.1
+  logger: ^1.1.0
+  carbon_icons: ^0.0.1+2
+  share_plus: ^6.3.1
+  fluttertoast: ^8.2.1
+  flutter_spinkit: ^5.1.0
+  flutter_native_splash: ^2.2.19
+  mockito: ^5.4.0
 
 dev_dependencies:
   flutter_test:
@@ -147,6 +163,7 @@ flutter:
     - images/
     - assets/
     - assets/images/
+    - assets/icons/
     - assets/page-1/images/
     - assets/pick.png
     - assets/pick1.png
